loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:8: error: ';' expected but 'while' found.
  } while (crossing==false)
    ^Poucet2:10: error: 'while' expected but 'if' found.
if (n<3) {droite()}
^Poucet2:12: error: '(' expected but '}' found.
}
^